--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/snapshot",
-      "schedule": "0 */4 * * *"
+      "schedule": "0 0 * * *"
     },
     {
       "path": "/api/cron/alerts",
